[BUGFIX][KOUPT-290] fix select overflow

--- a/web/sass/_forms.scss
+++ b/web/sass/_forms.scss
@@ -131,6 +131,7 @@ select {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
+  width: 100%;
   padding-left: 3px;
 }
 
